# playground

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
crate/: Cargo.toml  build.rs
crate/src/: ast.rs  emit_ts.rs  lexer.rs  lib.rs  parser.rs
tests/: run.mjs
tests/fixtures/: basics_test.almd  float_test.almd  int_test.almd  json_test.almd  list_test.almd  map_test.almd  math_test.almd  path_test.almd  regex_test.almd  string_test.almd  time_test.almd
web/: almide.tmLanguage.json  index.html
web/pkg/: almide_playground.d.ts  almide_playground.js  almide_playground_bg.wasm  almide_playground_bg.wasm.d.ts  package.json
